fix: corregir bugs módulo VeriFactu — PDF facturas, rectificativa, registrarAnulacionLocal
BUG-008: PDF de facturas fallaba por uso de #numbers.parseDecimal (eliminado en
Thymeleaf 3.x). Reemplazado por .signum() > 0. También corregido linea.subtotal
→ linea.total y linea.precio → linea.precioUnitario en template pdf/factura.html.

BUG-009: Formulario rectificativa tenía name=motivoRectificacion en lugar de
name=motivo (mismatch con @RequestParam del controller). Eliminado onsubmit inline
(violación CSP) y reemplazado por data-confirm en el botón.

BUG-010: VerifactuService.registrarAnulacionLocal llamaba incondicionalmente a
generarRegistroAnulacionXml incluso sin VeriFactu configurado, fallando XSD
validation con NIF vacío. Ahora verifica configuración antes de generar XML.

Dev: añadido server.error.include-message=always y logging.file.name en
application-dev.properties para facilitar depuración. WebErrorHandler expone
cadena de excepción en página de error (solo dev).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012JrdmYJpGbaaXg8dsmCcdo